fixed buttons not showing

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -57,6 +57,7 @@
     border-radius: 50%;
     width: get-size(1250);
     font-size: get-size(500);
+    z-index: 2;
 
     display: flex;
     justify-content: center;
@@ -65,7 +66,7 @@
 
     
 
-    align-self: center;
+    align-self: flex-end;
     grid-row-start: 2;
     
     &:where(:hover, :focus){
